--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="wrapper">
         <div id="navbar"><!--Nav Bar Starts -->
             <div class="menu">
-                <button class=menuBtn><img src="images/menu.png"></button>
-                <div class="menubar">
+                <button class=menubtn><img src="images/menu-24px.svg"></button>
+                <!--
+                    div class="menubar">
                     <div class="logo">
-                        <img src="images/logo.png">
-                        GDG Indore
+                        <img src="images/gdgindore.png">
                     </div>
                     <div class="home">
                         <div class="icon"></div>
@@ -30,9 +30,9 @@
                         <button class="contact">Contact</button>
                     </div>
                 </div>
+                -->
             </div>
-            <div id="logo"><img src="/images/logo.png"></div>
-            <h1>GDG Indore</h1>
+            <div id="logo"><img src="/images/gdgindore.png"></div>
         </div><!--Nav Bar Ends-->
 
 
